Fixed ACP settings page bugs discovered after previous commit. Improved form validation and added admin logging to settings changes. Other small improvements to namings and copy text.

--- a/adm/style/acp_discord_notifications.html
+++ b/adm/style/acp_discord_notifications.html
@@ -28,7 +28,7 @@
 		<dl>
 			<dt><label for="dn_test_message">{L_DN_TEST_MESSAGE}{L_COLON}</label><br /><span>{L_DN_TEST_DESCRIPTION}</span></dt>
 			<dd>
-				<input name="dn_text_message" type="text" value="{{ DN_TEST_MESSAGE_DEFAULT }}" size="100" maxlength="255" />
+				<input name="dn_text_message" type="text" value="{{ DN_TEST_MESSAGE_TEXT }}" size="100" maxlength="255" />
 			</dd>
 		</dl>
 	</fieldset>
