--- a/adm/style/acp_discord_notifications.html
+++ b/adm/style/acp_discord_notifications.html
@@ -26,12 +26,6 @@
 			</dd>
 		</dl>
 		<dl>
-			<dt><label for="dn_test_message">{L_DN_TEST_MESSAGE}{L_COLON}</label><br /><span>{L_DN_TEST_DESCRIPTION}</span></dt>
-			<dd>
-				<input id="dn_test_message" name="dn_test_message" type="text" value="{{ DN_TEST_MESSAGE_TEXT }}" size="100" maxlength="255" />
-			</dd>
-		</dl>
-		<dl>
 			<dt><label for="dn_connect_to">{L_DN_CONNECT_TIMEOUT}{L_COLON}</label><br /><span>{L_DN_CONNECT_TO_DESCRIPTION}</span></dt>
 			<dd>
 				<input id="dn_connect_to" name="dn_connect_to" type="text" value="{{ DN_CONNECT_TIMEOUT }}" size="4" maxlength="4" />
@@ -41,6 +35,16 @@
 			<dt><label for="dn_exec_to">{L_DN_EXEC_TIMEOUT}{L_COLON}</label><br /><span>{L_DN_EXEC_TO_DESCRIPTION}</span></dt>
 			<dd>
 				<input id="dn_exec_to" name="dn_exec_to" type="text" value="{{ DN_EXEC_TIMEOUT }}" size="4" maxlength="4" />
+			</dd>
+		</dl>
+	</fieldset>
+
+	<fieldset>
+		<legend>{L_DN_TEST_SETTINGS}</legend>
+		<dl>
+			<dt><label for="dn_test_message">{L_DN_TEST_MESSAGE}{L_COLON}</label><br /><span>{L_DN_TEST_DESCRIPTION}</span></dt>
+			<dd>
+				<input id="dn_test_message" name="dn_test_message" type="text" value="{{ DN_TEST_MESSAGE_TEXT }}" size="100" maxlength="255" />
 			</dd>
 		</dl>
 		<dl>
