Add notifications for topic/post approval

--- a/adm/style/acp_discord_notifications.html
+++ b/adm/style/acp_discord_notifications.html
@@ -82,6 +82,11 @@
 				<label><input type="radio" class="radio" name="dn_post_unlock" value="0" <!-- IF not DN_POST_UNLOCK -->checked="checked"<!-- ENDIF --> /> {L_NO}</label></dd>
 		</dl>
 		<dl>
+			<dt><label>{L_DN_POST_APPROVE}{L_COLON}</label></dt>
+			<dd><label><input type="radio" class="radio" name="dn_post_approve" value="1" <!-- IF DN_POST_APPROVE -->checked="checked"<!-- ENDIF -->/> {L_YES}</label>
+				<label><input type="radio" class="radio" name="dn_post_approve" value="0" <!-- IF not DN_POST_APPROVE -->checked="checked"<!-- ENDIF --> /> {L_NO}</label></dd>
+		</dl>
+		<dl>
 			<dt><label>{L_DN_TOPIC_CREATE}{L_COLON}</label></dt>
 			<dd><label><input type="radio" class="radio" name="dn_topic_create" value="1" <!-- IF DN_TOPIC_CREATE -->checked="checked"<!-- ENDIF -->/> {L_YES}</label>
 				<label><input type="radio" class="radio" name="dn_topic_create" value="0" <!-- IF not DN_TOPIC_CREATE -->checked="checked"<!-- ENDIF --> /> {L_NO}</label></dd>
@@ -105,6 +110,11 @@
 			<dt><label>{L_DN_TOPIC_UNLOCK}{L_COLON}</label></dt>
 			<dd><label><input type="radio" class="radio" name="dn_topic_unlock" value="1" <!-- IF DN_TOPIC_UNLOCK -->checked="checked"<!-- ENDIF -->/> {L_YES}</label>
 				<label><input type="radio" class="radio" name="dn_topic_unlock" value="0" <!-- IF not DN_TOPIC_UNLOCK -->checked="checked"<!-- ENDIF --> /> {L_NO}</label></dd>
+		</dl>
+		<dl>
+			<dt><label>{L_DN_TOPIC_APPROVE}{L_COLON}</label></dt>
+			<dd><label><input type="radio" class="radio" name="dn_topic_approve" value="1" <!-- IF DN_TOPIC_APPROVE -->checked="checked"<!-- ENDIF -->/> {L_YES}</label>
+				<label><input type="radio" class="radio" name="dn_topic_approve" value="0" <!-- IF not DN_TOPIC_APPROVE -->checked="checked"<!-- ENDIF --> /> {L_NO}</label></dd>
 		</dl>
 		<dl>
 			<dt><label>{L_DN_USER_CREATE}{L_COLON}</label></dt>
